--- a/mercado.html
+++ b/mercado.html
@@ -121,7 +121,7 @@
       {id:'batatinha',name:'Batatinha (kg)',price:6.00,image:'images/batatinha.png'},
       {id:'cebola_branca',name:'Cebola Branca (kg)',price:5.00,image:'images/cebola_branca.png'},
       {id:'cebola_vermelha',name:'Cebola Vermelha (kg)',price:5.50,image:'images/cebola_vermelha.png'},
-      {id:'coentro',name:'Coentro (un)',price:1.50,image:'images/coentro.png'},
+      {id:'coentro',name:'Coentro (un)',price:1.50,image:'verduras-Coentro-1586828924301.png'},
       {id:'alface',name:'Alface (un)',price:2.20,image:'images/alface.png'},
       {id:'abobora',name:'Abóbora (kg)',price:3.80,image:'images/abobora.png'},
       {id:'pepino',name:'Pepino (kg)',price:4.20,image:'images/pepino.png'}
