--- a/mercado.html
+++ b/mercado.html
@@ -115,7 +115,7 @@
       {id:'goiaba',name:'Goiaba (kg)',price:5.00,image:'images/goiaba.png'},
       {id:'uva',name:'Uva (kg)',price:12.00,image:'images/uva.png'},
       {id:'abacaxi',name:'Abacaxi (un)',price:7.00,image:'images/abacaxi.png'},
-      {id:'beterraba',name:'Beterraba (kg)',price:4.50,image:'images/beterraba.png'},
+      {id:'beterraba',name:'Beterraba (kg)',price:4.50,image:'4.png'},
       {id:'cenoura',name:'Cenoura (kg)',price:4.00,image:'images/cenoura_b64047d1-0a34-420d-8fc7-40278c89b558.png'},
       {id:'batatadoce',name:'Batata Doce (kg)',price:5.50,image:'images/batatadoce.png'},
       {id:'batatinha',name:'Batatinha (kg)',price:6.00,image:'images/batatinha.png'},
