--- a/mercado.html
+++ b/mercado.html
@@ -106,7 +106,7 @@
 
     // PRODUTOS (imagens PNG padronizadas) - mantidos os itens originais e adicionados tomate, pimentão, quiabo
     const products = [
-      {id:'banana',name:'Banana (dúzia)',price:8.50,image:'images/banana.png'},
+      {id:'banana',name:'Banana (dúzia)',price:8.50,image:'5.png'},
       {id:'maca',name:'Maçã (kg)',price:7.50,image:'images/maca.png'},
       {id:'laranja',name:'Laranja (kg)',price:3.20,image:'images/laranja.png'},
       {id:'tangerina',name:'Tangerina (kg)',price:3.40,image:'images/tangerina.png'},
