--- a/mercado.html
+++ b/mercado.html
@@ -110,8 +110,8 @@
       {id:'maca',name:'Maçã (kg)',price:7.50,image:'3.png'},
       {id:'laranja',name:'Laranja (kg)',price:3.20,image:'4.png'},
       {id:'tangerina',name:'Tangerina (kg)',price:3.40,image:'images/tangerina.png'},
-      {id:'limao',name:'Limão (kg)',price:4.00,image:'images/limao.png'},
-      {id:'abacate',name:'Abacate (kg)',price:6.50,image:'images/abacate.png'},
+      {id:'limao',name:'Limão (kg)',price:4.00,image:'6.png'},
+      {id:'abacate',name:'Abacate (kg)',price:6.50,image:'7.png'},
       {id:'goiaba',name:'Goiaba (kg)',price:5.00,image:'images/goiaba.png'},
       {id:'uva',name:'Uva (kg)',price:12.00,image:'images/uva.png'},
       {id:'abacaxi',name:'Abacaxi (un)',price:7.00,image:'images/abacaxi.png'},
