--- a/mercado.html
+++ b/mercado.html
@@ -109,7 +109,7 @@
       {id:'banana',name:'Banana (dúzia)',price:8.50,image:'2.png'},
       {id:'maca',name:'Maçã (kg)',price:7.50,image:'3.png'},
       {id:'laranja',name:'Laranja (kg)',price:3.20,image:'4.png'},
-      {id:'tangerina',name:'Tangerina (kg)',price:3.40,image:'images/tangerina.png'},
+      {id:'tangerina',name:'Tangerina (kg)',price:3.40,image:'5.png'},
       {id:'limao',name:'Limão (kg)',price:4.00,image:'6.png'},
       {id:'abacate',name:'Abacate (kg)',price:6.50,image:'7.png'},
       {id:'goiaba',name:'Goiaba (kg)',price:5.00,image:'images/goiaba.png'},
