--- a/mercado.html
+++ b/mercado.html
@@ -112,8 +112,8 @@
       {id:'tangerina',name:'Tangerina (kg)',price:3.40,image:'5.png'},
       {id:'limao',name:'Limão (kg)',price:4.00,image:'6.png'},
       {id:'abacate',name:'Abacate (kg)',price:6.50,image:'7.png'},
-      {id:'goiaba',name:'Goiaba (kg)',price:5.00,image:'images/goiaba.png'},
-      {id:'uva',name:'Uva (kg)',price:12.00,image:'images/uva.png'},
+      {id:'goiaba',name:'Goiaba (kg)',price:5.00,image:'8.png'},
+      {id:'uva',name:'Uva (kg)',price:12.00,image:'9.png'},
       {id:'abacaxi',name:'Abacaxi (un)',price:7.00,image:'images/abacaxi.png'},
       {id:'beterraba',name:'Beterraba (kg)',price:4.50,image:'11.png'},
       {id:'cenoura',name:'Cenoura (kg)',price:4.00,image:'images/cenoura_b64047d1-0a34-420d-8fc7-40278c89b558.png'},
