--- a/mercado.html
+++ b/mercado.html
@@ -114,12 +114,12 @@
       {id:'abacate',name:'Abacate (kg)',price:6.50,image:'7.png'},
       {id:'goiaba',name:'Goiaba (kg)',price:5.00,image:'8.png'},
       {id:'uva',name:'Uva (kg)',price:12.00,image:'9.png'},
-      {id:'abacaxi',name:'Abacaxi (un)',price:7.00,image:'images/abacaxi.png'},
+      {id:'abacaxi',name:'Abacaxi (un)',price:7.00,image:'10.png'},
       {id:'beterraba',name:'Beterraba (kg)',price:4.50,image:'11.png'},
-      {id:'cenoura',name:'Cenoura (kg)',price:4.00,image:'images/cenoura_b64047d1-0a34-420d-8fc7-40278c89b558.png'},
-      {id:'batatadoce',name:'Batata Doce (kg)',price:5.50,image:'images/batatadoce.png'},
-      {id:'batatinha',name:'Batatinha (kg)',price:6.00,image:'images/batatinha.png'},
-      {id:'cebola_branca',name:'Cebola Branca (kg)',price:5.00,image:'images/cebola_branca.png'},
+      {id:'cenoura',name:'Cenoura (kg)',price:4.00,image:'12.png'},
+      {id:'batatadoce',name:'Batata Doce (kg)',price:5.50,image:'13.png'},
+      {id:'batatinha',name:'Batatinha (kg)',price:6.00,image:'14.png'},
+      {id:'cebola_branca',name:'Cebola Branca (kg)',price:5.00,image:'15.png'},
       {id:'cebola_vermelha',name:'Cebola Vermelha (kg)',price:5.50,image:'images/cebola_vermelha.png'},
       {id:'coentro',name:'Coentro (un)',price:1.50,image:'images/coentro.png'},
       {id:'alface',name:'Alface (un)',price:2.20,image:'17.png'},
