--- a/mercado.html
+++ b/mercado.html
@@ -120,16 +120,16 @@
       {id:'batatadoce',name:'Batata Doce (kg)',price:5.50,image:'13.png'},
       {id:'batatinha',name:'Batatinha (kg)',price:6.00,image:'14.png'},
       {id:'cebola_branca',name:'Cebola Branca (kg)',price:5.00,image:'15.png'},
-      {id:'cebola_vermelha',name:'Cebola Vermelha (kg)',price:5.50,image:'images/cebola_vermelha.png'},
-      {id:'coentro',name:'Coentro (un)',price:1.50,image:'images/coentro.png'},
-      {id:'alface',name:'Alface (un)',price:2.20,image:'17.png'},
-      {id:'abobora',name:'Abóbora (kg)',price:3.80,image:'images/abobora.png'},
-      {id:'pepino',name:'Pepino (kg)',price:4.20,image:'images/pepino.png'},
+      {id:'cebola_vermelha',name:'Cebola Vermelha (kg)',price:5.50,image:'16.png'},
+      {id:'coentro',name:'Coentro (un)',price:1.50,image:'17.png'},
+      {id:'alface',name:'Alface (un)',price:2.20,image:'30.png'},
+      {id:'abobora',name:'Abóbora (kg)',price:3.80,image:'19.png'},
+      {id:'pepino',name:'Pepino (kg)',price:4.20,image:'20.png'},
 
       // adicionados
-      {id:'tomate',name:'Tomate (kg)',price:6.80,image:'images/tomate.png'},
-      {id:'pimentao',name:'Pimentão (kg)',price:5.50,image:'images/pimentao.png'},
-      {id:'quiabo',name:'Quiabo (kg)',price:7.30,image:'images/quiabo.png'}
+      {id:'tomate',name:'Tomate (kg)',price:6.80,image:'21.png'},
+      {id:'pimentao',name:'Pimentão (kg)',price:5.50,image:'22.png'},
+      {id:'quiabo',name:'Quiabo (kg)',price:7.30,image:'20.png'}
     ];
 
     let currentUser = null;
