--- a/mercado.html
+++ b/mercado.html
@@ -63,7 +63,8 @@
       <div id="pageProfile" class="card hidden">
         <h3>Perfil</h3>
         <div class="row">
-          <img id="profileImage" src="" alt="foto" style="width:92px;height:92px;border-radius:10px;object-fit:cover" />
+          <!-- FOTO DE PERFIL PADRÃO -->
+          <img id="profileImage" src="images/usuario.png" alt="foto" style="width:92px;height:92px;border-radius:10px;object-fit:cover" />
           <div style="margin-left:12px">
             <div id="profileName" style="font-weight:700"></div>
             <div id="profileEmail" class="small"></div>
@@ -104,7 +105,6 @@
     const auth = firebase.auth();
     const db = firebase.database();
 
-    // PRODUTOS (imagens PNG padronizadas) - mantidos os itens originais e adicionados tomate, pimentão, quiabo
     const products = [
       {id:'banana',name:'Banana (dúzia)',price:8.50,image:'2.png'},
       {id:'maca',name:'Maçã (kg)',price:7.50,image:'3.png'},
@@ -125,8 +125,6 @@
       {id:'alface',name:'Alface (un)',price:2.20,image:'30.png'},
       {id:'abobora',name:'Abóbora (kg)',price:3.80,image:'19.png'},
       {id:'pepino',name:'Pepino (kg)',price:4.20,image:'20.png'},
-
-      // adicionados
       {id:'tomate',name:'Tomate (kg)',price:6.80,image:'21.png'},
       {id:'pimentao',name:'Pimentão (kg)',price:5.50,image:'22.png'},
       {id:'quiabo',name:'Quiabo (kg)',price:7.30,image:'20.png'}
@@ -144,6 +142,7 @@
       document.getElementById('greeting').textContent = 'Bem-vindo, ' + (p.name||'');
       document.getElementById('profileName').textContent = p.name || '';
       document.getElementById('profileEmail').textContent = p.email || '';
+      // FOTO PADRÃO DE PERFIL
       document.getElementById('profileImage').src = p.image || 'images/usuario.png';
       renderProducts();
       loadOrders();
