--- a/mercado.html
+++ b/mercado.html
@@ -18,7 +18,8 @@
     button{cursor:pointer}
     .row{display:flex;gap:10px;align-items:center}
     nav.bottom{position:fixed;left:0;right:0;bottom:0;background:#fff;border-top:1px solid #eee;display:flex;justify-content:space-around;padding:8px 0}
-    nav.bottom button{background:transparent;border:none;font-weight:700}
+    nav.bottom button{background:transparent;border:none;font-weight:700;display:flex;flex-direction:column;align-items:center;font-size:14px;color:#2e8b57}
+    nav.bottom span{font-size:20px}
     .hidden{display:none}
     .small{font-size:13px;color:#666}
   </style>
@@ -63,27 +64,21 @@
       <div id="pageProfile" class="card hidden">
         <h3>Perfil</h3>
         <div class="row">
-          <!-- FOTO DE PERFIL PADRÃO -->
-          <img id="profileImage" src="images/usuario.png" alt="foto" style="width:92px;height:92px;border-radius:10px;object-fit:cover" />
+          <img id="profileImage" src="avatar.png" alt="foto" style="width:92px;height:92px;border-radius:10px;object-fit:cover" />
           <div style="margin-left:12px">
             <div id="profileName" style="font-weight:700"></div>
             <div id="profileEmail" class="small"></div>
           </div>
         </div>
-        <div style="margin-top:10px">
-          <input id="editImagePath" placeholder="images/usuario.png" />
-          <button id="btnSaveProfile">Salvar imagem</button>
-        </div>
       </div>
-
     </section>
   </div>
 
   <nav class="bottom">
-    <button data-page="products">Produtos</button>
-    <button data-page="deposit">Depósito</button>
-    <button data-page="orders">Extrato</button>
-    <button data-page="profile">Perfil</button>
+    <button data-page="products"><span>🍎</span>Produtos</button>
+    <button data-page="deposit"><span>💰</span>Depósito</button>
+    <button data-page="orders"><span>📜</span>Extrato</button>
+    <button data-page="profile"><span>👤</span>Perfil</button>
   </nav>
 
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -139,19 +134,18 @@
       currentUser = u;
       const snap = await db.ref('users/'+u.uid).once('value');
       const p = snap.val() || {};
-      document.getElementById('greeting').textContent = 'Bem-vindo, ' + (p.name||'');
-      document.getElementById('profileName').textContent = p.name || '';
-      document.getElementById('profileEmail').textContent = p.email || '';
-      // FOTO PADRÃO DE PERFIL
-      document.getElementById('profileImage').src = p.image || 'images/usuario.png';
+      $('greeting').textContent = 'Bem-vindo, ' + (p.name||'');
+      $('profileName').textContent = p.name || '';
+      $('profileEmail').textContent = p.email || '';
+      $('profileImage').src = 'avatar.png';
       renderProducts();
       loadOrders();
     });
 
-    document.getElementById('btnLogout').onclick = ()=> auth.signOut();
+    $('btnLogout').onclick = ()=> auth.signOut();
 
     function renderProducts(){
-      const list = document.getElementById('productsList');
+      const list = $('productsList');
       list.innerHTML = '';
       products.forEach(p=>{
         const div = document.createElement('div');
@@ -161,7 +155,7 @@
           <div style="font-weight:700">${p.name}</div>
           <div>R$ ${p.price.toFixed(2)}</div>
           <input type="number" min="0" placeholder="Qtd" data-id="${p.id}" style="width:80px;margin-top:8px" />
-        <div style="margin-top:8px"><b>Subtotal:</b> R$ <span data-sub="${p.id}">0.00</span></div>
+          <div style="margin-top:8px"><b>Subtotal:</b> R$ <span data-sub="${p.id}">0.00</span></div>
         `;
         list.appendChild(div);
       });
@@ -180,61 +174,65 @@
         if(el) el.textContent = sub.toFixed(2);
         t += sub;
       });
-      document.getElementById('cartTotal').textContent = t.toFixed(2);
+      $('cartTotal').textContent = t.toFixed(2);
     }
 
-    document.getElementById('btnCheckout').onclick = async () => {
+    $('btnCheckout').onclick = async () => {
       if(!currentUser) return alert('Faça login antes');
       const items = products.filter(p => (cart[p.id]||0) > 0).map(p => ({ name:p.name, qty: cart[p.id], price: p.price, subtotal: p.price * cart[p.id] }));
       if(items.length === 0) return alert('Nenhum produto selecionado');
       const total = items.reduce((a,b)=>a+b.subtotal,0);
-      await db.ref('orders/'+currentUser.uid).push({items, total, createdAt: new Date().toISOString()});
-      alert('Pedido salvo! Em "Extrato" você pode verificar o pedido.');
+      const ref = await db.ref('orders/'+currentUser.uid).push({items, total, createdAt: new Date().toISOString()});
+      alert('Pedido salvo! Você pode verificar ou cancelar no "Extrato".');
       cart = {}; renderProducts(); loadOrders();
     };
 
     async function loadOrders(){
       if(!currentUser) return;
-      const out = document.getElementById('ordersList');
+      const out = $('ordersList');
       out.innerHTML = 'Carregando...';
       const snap = await db.ref('orders/'+currentUser.uid).once('value');
       const v = snap.val();
       if(!v){ out.innerHTML = 'Nenhum pedido.'; return; }
       out.innerHTML = '';
-      Object.values(v).forEach(o=>{
+      Object.entries(v).forEach(([key,o])=>{
         const card = document.createElement('div'); card.className='card';
         const itemsHtml = o.items.map(i=> `${i.qty}x ${i.name} — R$ ${i.subtotal.toFixed(2)}` ).join('<br>');
-        card.innerHTML = `<b>${new Date(o.createdAt).toLocaleString()}</b><br>${itemsHtml}<br><b>Total:</b> R$ ${o.total.toFixed(2)}`;
+        card.innerHTML = `
+          <b>${new Date(o.createdAt).toLocaleString()}</b><br>
+          ${itemsHtml}<br>
+          <b>Total:</b> R$ ${o.total.toFixed(2)}<br>
+          <button data-id="${key}" class="btnCancel" style="margin-top:8px;background:#f33;color:#fff;border:none;padding:6px 10px;border-radius:8px">Cancelar Pedido</button>
+        `;
         out.appendChild(card);
+      });
+
+      document.querySelectorAll('.btnCancel').forEach(btn=>{
+        btn.onclick = async ()=>{
+          if(confirm('Tem certeza que deseja cancelar este pedido?')){
+            await db.ref('orders/'+currentUser.uid+'/'+btn.dataset.id).remove();
+            alert('Pedido cancelado com sucesso.');
+            loadOrders();
+          }
+        };
       });
     }
 
-    document.getElementById('btnSaveProfile').onclick = async ()=>{
-      if(!currentUser) return alert('Login primeiro');
-      const pth = document.getElementById('editImagePath').value.trim() || 'images/usuario.png';
-      await db.ref('users/'+currentUser.uid+'/image').set(pth);
-      document.getElementById('profileImage').src = pth;
-      alert('Imagem atualizada!');
+    $('btnCopyPix').onclick = ()=> {
+      const k = $('pixKey').textContent;
+      navigator.clipboard.writeText(k).then(()=> alert('Chave Pix copiada!'));
     };
 
     document.querySelectorAll('nav.bottom button').forEach(b=>{
       b.onclick = ()=>{
         const page = b.dataset.page;
-        ['pageProducts','pageDeposit','pageOrders','pageProfile'].forEach(id=> {
-          const el = document.getElementById(id);
-          if(el) el.classList.add('hidden');
-        });
-        if(page === 'products') document.getElementById('pageProducts').classList.remove('hidden');
-        if(page === 'deposit') document.getElementById('pageDeposit').classList.remove('hidden');
-        if(page === 'orders') document.getElementById('pageOrders').classList.remove('hidden');
-        if(page === 'profile') document.getElementById('pageProfile').classList.remove('hidden');
+        ['pageProducts','pageDeposit','pageOrders','pageProfile'].forEach(id=> $(id).classList.add('hidden'));
+        if(page === 'products') $('pageProducts').classList.remove('hidden');
+        if(page === 'deposit') $('pageDeposit').classList.remove('hidden');
+        if(page === 'orders') $('pageOrders').classList.remove('hidden');
+        if(page === 'profile') $('pageProfile').classList.remove('hidden');
       };
     });
-
-    document.getElementById('btnCopyPix').onclick = ()=> {
-      const k = document.getElementById('pixKey').textContent;
-      navigator.clipboard.writeText(k).then(()=> alert('Chave Pix copiada!'));
-    };
   </script>
 </body>
 </html>
