--- a/mercado.html
+++ b/mercado.html
@@ -75,7 +75,7 @@
       <div id="pageProfile" class="card hidden">
         <h3>Perfil</h3>
         <div class="row">
-          <img id="profileImage" src="avatar.png" alt="foto" style="width:92px;height:92px;border-radius:10px;object-fit:cover" />
+          <img id="profileImage" src="1.png" alt="foto" style="width:92px;height:92px;border-radius:10px;object-fit:cover" />
           <div style="margin-left:12px">
             <div id="profileName" style="font-weight:700"></div>
             <div id="profileEmail" class="small"></div>
