--- a/mercado.html
+++ b/mercado.html
@@ -33,6 +33,31 @@
       margin-top:8px;
       text-align:center;
     }
+
+    /* --- Botão flutuante WhatsApp --- */
+    #whatsapp-flutuante {
+      position: fixed;
+      width: 60px;
+      height: 60px;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25d366;
+      border-radius: 50%;
+      text-align: center;
+      box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+      z-index: 999;
+      transition: transform 0.2s;
+    }
+
+    #whatsapp-flutuante:hover {
+      transform: scale(1.1);
+    }
+
+    #whatsapp-flutuante img {
+      width: 35px;
+      height: 35px;
+      margin-top: 12px;
+    }
   </style>
 </head>
 <body>
@@ -91,6 +116,13 @@
     <button data-page="orders"><span>📜</span>Extrato</button>
     <button data-page="profile"><span>👤</span>Perfil</button>
   </nav>
+
+  <!-- Botão flutuante WhatsApp -->
+  <a href="https://wa.me/557599537162?text=Olá,+preciso+de+ajuda+com+meu+pedido+no+Mercadinho+da+Vani" 
+     target="_blank" 
+     id="whatsapp-flutuante">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+  </a>
 
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
