--- a/mercado.html
+++ b/mercado.html
@@ -39,7 +39,7 @@
       position: fixed;
       width: 60px;
       height: 60px;
-      bottom: 20px;
+      bottom: 85px; /* ajustado para não cobrir o menu inferior */
       right: 20px;
       background-color: #25d366;
       border-radius: 50%;
@@ -118,9 +118,10 @@
   </nav>
 
   <!-- Botão flutuante WhatsApp -->
-  <a href="https://wa.me/557599537162?text=Olá,+preciso+de+ajuda+com+meu+pedido+no+Mercadinho+da+Vani" 
+  <a href="https://wa.me/5575999537162?text=Olá,+preciso+de+ajuda+com+meu+pedido+no+Mercadinho+da+Vani" 
      target="_blank" 
-     id="whatsapp-flutuante">
+     id="whatsapp-flutuante"
+     title="Suporte no WhatsApp">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
   </a>
 
